--- a/src/_reset.scss
+++ b/src/_reset.scss
@@ -5,3 +5,14 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.container {
+    width: 80%;
+    height: 100%;
+    margin: auto;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
