--- a/src/0303_product_discount.scss
+++ b/src/0303_product_discount.scss
@@ -2,27 +2,66 @@
 
 .product {
     width: 300px;
-    min-height: 500px;
+    min-height: 200px;
     background: #dedede;
     padding: 15px;
+    margin: 0 15px;
+    margin-bottom: 15px;
 
     .product-image {
         width: 100%;
         height: 200px;
         background-color: #936161;
-        background-image: url(../dist/image/8DA5E2B6-97FD-4582-B53D-CE7DFE7B6E2E.jpg);
-        background-position: center;
-        background-size: cover;
         color: #fff;
         margin-bottom: 15px;
         display: flex;
         align-items: center;
         justify-content: center;
+        position: relative;
+        overflow: hidden;
+
+        .product-image-wrap {
+            background-position: center;
+            background-image: url(../image/cat2.jpg);
+            background-size: cover;
+            width: 100%;
+            height: 100%;
+            transition: 5s;
+        }
+
+        .discount-bar {
+            background: #dd8436;
+            width: 100%;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 18px;
+            font-weight: 700;
+            font-family: 'Shantell Sans', cursive;
+            transform: rotate(45deg);
+            position: absolute;
+            right: -105px;
+            top: 10px;
+        }
+
+        &:hover {
+            .product-image-wrap {
+                transform: scale(1.5);
+            }
+
+            .discount-bar {
+                background-color: rgb(231, 67, 22);
+                color: #f8f2f2;
+            }
+        }
     }
+
 
     .product-title {
         font-size: 20px;
         font-weight: 700;
         margin-bottom: 15px;
     }
+
 }
