--- a/src/0305_ layout_1_rwd.scss
+++ b/src/0305_ layout_1_rwd.scss
@@ -25,7 +25,7 @@ body {
 
 
 
-    .menu {
+    .menu ul {
         list-style-type: none;
         display: flex;
 
@@ -100,7 +100,7 @@ body {
                     content: '';
                     border-right: 2px dashed #fff;
                     position: absolute;
-                    right: 10px;
+                    right: 0px;
                     top: 20px;
                     height: calc(100% - 40px);
                 }
