--- a/src/_layout_1_rwd_mobile.scss
+++ b/src/_layout_1_rwd_mobile.scss
@@ -1,13 +1,15 @@
 .mobile-icon {
-    //position: relative;
-    //display: flex;
-    //flex-direction: column;
-    //cursor: pointer;
+    position: relative;
+    display: flex;
     display: none;
+    flex-direction: column;
+    cursor: pointer;
+    width: 30px;
+
 
     >span {
 
-        display: inline-block;
+        //display: inline-block;
         width: 30px;
         height: 5px;
         background: #000;
@@ -27,4 +29,138 @@
     }
 }
 
-@media screen and (max-width: 600px) {}
+#mobile-menu-switch {
+    display: none;
+
+    &:checked {
+        ~.mobile-icon {
+            >span {
+                position: absolute;
+
+                &:first-child {
+                    transform: rotate(45deg);
+                }
+
+                &:nth-child(2) {
+                    display: none;
+                }
+
+                &:last-child {
+                    transform: rotate(-45deg);
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width:750px) {
+    .mobile-icon {
+        display: flex;
+    }
+
+    .header {
+
+        .menu {
+            display: none;
+        }
+    }
+
+    #mobile-menu-switch {
+        &:checked {
+            ~.menu {
+                display: block;
+
+                li {
+                    margin-left: 0;
+                    margin-bottom: 15px;
+
+                    &:last-child {
+                        margin-bottom: 0;
+                    }
+                }
+
+                &.extend ul {
+                    position: absolute;
+                    top: 75px;
+                    background: #ffffff;
+                    width: 80%;
+                    left: 10%;
+                    border-radius: 10px;
+                    border-top-right-radius: 0;
+                    border-top-left-radius: 0;
+
+                    padding-top: 15px;
+                    flex-direction: column;
+
+                    li {
+                        margin-left: 0;
+                        margin-bottom: 15px;
+                    }
+
+                }
+
+                &.popup {
+                    position: fixed;
+                    width: 100%;
+                    height: 100vh;
+                    left: 0;
+                    top: 0;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        z-index: 1;
+                        background: #0000002c;
+                        width: 100%;
+                        height: 100%;
+                    }
+
+                    ul {
+                        width: 80%;
+                        position: relative;
+                        background: #fff;
+                        z-index: 2;
+                        padding: 20px;
+                        display: flex;
+                        flex-direction: column;
+                    }
+
+
+                }
+            }
+        }
+    }
+
+    .join-form .join-form-content .content-wrap {
+        flex-direction: column;
+
+        >div:first-child::before {
+            border-right: 0;
+            border-bottom: 3px dashed #fff;
+            right: unset;
+            top: unset;
+            left: 20px;
+            bottom: 0;
+            width: calc(100% - 40px);
+        }
+
+        .left-side {
+            width: 100%;
+        }
+
+        .right-side {
+            width: 100%;
+        }
+
+
+
+
+
+    }
+}
