--- a/src/_layout_1_rwd_mobile.scss
+++ b/src/_layout_1_rwd_mobile.scss
@@ -158,9 +158,31 @@
             width: 100%;
         }
 
-
-
-
-
     }
+
+    .flow {
+        &::after {
+            left: 25px;
+        }
+
+        .flow-item {
+            justify-content: flex-start;
+            padding: 40px 0;
+            padding-left: 12px;
+
+
+            &:nth-child(even) .flow-text {
+                right: unset;
+                left: 0;
+                margin-right: 0;
+                margin-left: 72px;
+                text-align: left;
+            }
+        }
+
+        .flow-text {
+            left: 0;
+        }
+    }
+
 }
